background image functional and as expected.  Fixing background of about me box to improve readability.  Their poor eyes....

--- a/styles.css
+++ b/styles.css
@@ -34,3 +34,7 @@
 html {
   background:url(road.jpg) no-repeat center center fixed;
 }
+
+.content{
+  background-color: #f4700a;
+}
